# web-simulant

./: .gitignore  API.md  COMPLETION-SUMMARY.md  Cargo.toml  DOCKER-HUB.md  Dockerfile  PROJECT-STATUS.md  QUICK-REFERENCE.md  README.md  RELEASE-v1.0.0.md  docker-compose.yml
bench/: API.md  Cargo.toml  Dockerfile  README.md  RESULTS.md  docker-compose.yml
bench/scripts/: README.md  analyze-metrics.sh  run-with-metrics.sh
bench/src/: main.rs
bench/workloads/: 01-baseline.sh  02-fixed-latency.sh  03-error-injection.sh  04-high-concurrency.sh  05-soak-test.sh  06-medium-duration.sh  README.md  error-injection-results.txt  fixed-latency-results.txt  high-concurrency-results.txt  medium-duration-results.txt  run-all.sh
config/: .gitkeep
examples/: 01-simple-health-check.yaml  02-user-api-basic.yaml  03-ecommerce-mixed.yaml  04-unreliable-external.yaml  05-time-window-degradation.yaml  06-mixture-lognormal-latency.yaml  07-rate-limit-bandwidth.yaml  08-error-payload-corruption.yaml  09-burst-events.yaml  README.md
jmeter/scripts/: Testing_001.jmx
requirements/: 000-overview.md  001-phased-plan.md  010-requirements.md  020-design.md  030-stack-evaluation.md  040-benchmark-harness.md  050-configuration-schema.md  060-control-plane-api.md  070-ui-design.md  080-phase1-implementation.md  090-phase2-implementation.md  990-project-memory.md
scripts/: integration-smoke.sh
src/: main.rs
src/config/: error.rs  mod.rs  parser.rs  schema.rs  validator.rs
src/control_plane/: handlers.rs  mod.rs  persistence.rs  server.rs
src/distributions/: exponential.rs  fixed.rs  log_normal.rs  mod.rs  normal.rs  (+1 more)
static/: .gitkeep  index.html
(+6 files in other folders)
