[package]
name = "web-simulant-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
